<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.apps.machete.mastermezcla.Inicio">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorPrimary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="55sp"
                    android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_button"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="70sp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    android:foreground="?attr/selectableItemBackground"
                    tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_marginTop="12sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"
                        android:layout_weight="1"
                        android:fontFamily="@font/basic"
                        android:text="@string/label_ActionBar_Inicio"
                        android:textSize="25sp" />

                </LinearLayout>

            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8sp"
                android:layout_marginTop="8sp"
                android:fontFamily="@font/lobster"
                android:text="@string/MasterMezcla_Logo"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="60sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/calculoBasico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#B0BEC5"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:text="@string/boton_basico"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:text="@string/text_basico"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/calculoAvanzado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#B0BEC5"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:text="@string/boton_avanzado"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:textStyle="italic" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/basic"
                        android:text="@string/texto_avanzado"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/botonCreditos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#B0BEC5"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:fontFamily="@font/basic"
                        android:text="@string/boton_creditos"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:textStyle="italic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20sp" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
