<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="c.apps.machete.mastermezcla.Basico">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_basico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55sp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back_button"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="70sp"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    app:srcCompat="?attr/actionModeCloseDrawable"
                    android:foreground="?attr/selectableItemBackground"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_marginTop="12sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/basic"
                    android:text="@string/label_ActionBar_Basico"
                    android:textSize="25sp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </LinearLayout>


    <ScrollView
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:fontFamily="@font/basic"
                android:text="@string/texto_spinnerResistencia"
                android:textColor="#37474F"
                android:textSize="19sp"
                android:textStyle="italic" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_Resistencia"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="40sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:fontFamily="@font/basic"
                android:text="@string/texto_spinnerGrava"
                android:textColor="#37474F"
                android:textSize="19sp"
                android:textStyle="italic" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_Grava"
                android:backgroundTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="40sp" />

            <android.support.v7.widget.CardView
                android:id="@+id/calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#B0BEC5"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:layout_gravity="center"
                        android:text="@string/boton_calcular"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        tools:fontFamily="@font/basic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <GridView
                android:id="@+id/tablaResultadosBasicos1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:numColumns="2"
                tools:ignore="NestedScrolling" />

            <GridView
                android:id="@+id/tablaResultadosBasicos2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:numColumns="2"
                tools:ignore="NestedScrolling" />

            <android.support.v7.widget.CardView
                android:id="@+id/regresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:cardBackgroundColor="#B0BEC5"
                app:cardCornerRadius="10sp"
                app:cardElevation="4sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="7dp"
                        android:text="@string/boton_inicio"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:textStyle="italic"
                        tools:fontFamily="@font/basic" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
